--- a/backend/.env.defaults
+++ b/backend/.env.defaults
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb+srv://trix_831:Joseph831@cluster4trix.kfhexca.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4trix
+#MONGO_URL=mongodb+srv://trix_831:Joseph831@cluster4trix.kfhexca.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4trix
+MONGO_URL=mongodb+srv://howhow0923:bubu930923@monopoly.rjknl86.mongodb.net/?retryWrites=true&w=majority&appName=monopoly
